--- a/helm/gymapp-staging-free-deployment.yaml
+++ b/helm/gymapp-staging-free-deployment.yaml
@@ -14,3 +14,9 @@ userService:
   
 workoutService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-workout-service:latest
+
+reportingService:
+  image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-reporting-service:latest
+
+gatewayService:
+  image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-gateway-service:latest
