--- a/helm/cad-gymapp/templates/frontend-deployment.yaml
+++ b/helm/cad-gymapp/templates/frontend-deployment.yaml
@@ -20,3 +20,7 @@ spec:
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - containerPort: 80
+          resources:
+            requests:
+              cpu: "250m"
+
