--- a/cad-GatewayService/src/main/resources/application.properties
+++ b/cad-GatewayService/src/main/resources/application.properties
@@ -4,23 +4,27 @@ server.forward-headers-strategy=framework
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
-server.servlet.context-path=/api
+spring.webflux.base-path=/api
 # Swagger Config
 springdoc.swagger-ui.path=/api-docs/swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url=true
 ## Gym Service Route
 spring.cloud.gateway.routes[0].id=gym-service
 spring.cloud.gateway.routes[0].uri=http://localhost:7081/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/gym/*
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/gym/*
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 ## User Service Route
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=http://localhost:7082/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/user/*
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/user/*
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 ## Workout Service Route
 spring.cloud.gateway.routes[2].id=workout-service
 spring.cloud.gateway.routes[2].uri=http://localhost:7083/
-spring.cloud.gateway.routes[2].predicates[0]=Path=/workout/*
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/workout/*
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
 ## Reporting Service Route
 spring.cloud.gateway.routes[3].id=reporting-service
 spring.cloud.gateway.routes[3].uri=http://localhost:7084/
-spring.cloud.gateway.routes[3].predicates[0]=Path=/reporting/*
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/reporting/*
+spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
