--- a/helm/cad-gymapp/templates/gateway-service-deployment.yaml
+++ b/helm/cad-gymapp/templates/gateway-service-deployment.yaml
@@ -41,15 +41,6 @@ spec:
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - containerPort: {{ .Values.gatewayService.port }}
-#          livenessProbe:
-#            httpGet:
-#              path: /user/healthcheck
-#              port: 7082
-#            initialDelaySeconds: 10
-#            timeoutSeconds: 5
-#          readinessProbe:
-#            httpGet:
-#              path: /user/healthcheck
-#              port: 7082
-#            initialDelaySeconds: 10
-#            timeoutSeconds: 5
+          resources:
+            requests:
+              cpu: "250m"
