Fixes - Running App

--- a/helm/cad-gymapp/templates/user-service-configmap.yaml
+++ b/helm/cad-gymapp/templates/user-service-configmap.yaml
@@ -5,3 +5,4 @@ metadata:
 data:
   sql_db_url: {{ .Values.userService.sqlDbUrl }}
   spring_datasource_url: {{ .Values.userService.springDatasourceUrl }}
+  gym_service_url: {{ .Values.gymServiceUrl }}
