--- a/helm/cad-gymapp/values.yaml
+++ b/helm/cad-gymapp/values.yaml
@@ -126,8 +126,8 @@ workoutService:
 reportingService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-reporting-service:latest
   port: 7084
-  gmailSmtpUsername: ""
-  gmailSmtpPassword: ""
+  gmailSmtpUsername: "davwol12@gmail.com"
+  gmailSmtpPassword: "rusjvmhfsdpefdei"
 
 gatewayService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-gateway-service:latest
