--- a/helm/gymapp-prod-enterprise-deployment.yaml
+++ b/helm/gymapp-prod-enterprise-deployment.yaml
@@ -1,6 +1,12 @@
 letsencrypt:
   issuer: "prod"
 
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 50
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
 
