--- a/helm/gymapp-staging-premium-deployment.yaml
+++ b/helm/gymapp-staging-premium-deployment.yaml
@@ -1,5 +1,11 @@
 domain: "premium.staging.drescherflo.de"
 
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 50
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
 
