--- a/helm/gymapp-prod-premium-deployment.yaml
+++ b/helm/gymapp-prod-premium-deployment.yaml
@@ -2,6 +2,12 @@ domain: "premium.drescherflo.de"
 letsencrypt:
   issuer: "prod"
 
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 50
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
 
