--- a/helm/gymapp-staging-enterprise-deployment.yaml
+++ b/helm/gymapp-staging-enterprise-deployment.yaml
@@ -1,3 +1,9 @@
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 50
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
 
