--- a/cad-GatewayService/src/main/resources/application-prod.properties
+++ b/cad-GatewayService/src/main/resources/application-prod.properties
@@ -4,23 +4,23 @@ server.forward-headers-strategy=framework
 logging.level.root=DEBUG
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
-spring.cloud.gateway.default-filters=StripPrefix=1
+spring.cloud.gateway.default-filters=StripPrefix=2
 # Swagger Config
 springdoc.swagger-ui.path=/api/api-docs/swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url=true
 ## Gym Service Route
 spring.cloud.gateway.routes[0].id=gym-service
 spring.cloud.gateway.routes[0].uri=${GYM_SERVICE_URL}
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/*
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/gym/*
 ## User Service Route
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=${USER_SERVICE_URL}
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/*
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/user/*
 ## Workout Service Route
 spring.cloud.gateway.routes[2].id=workout-service
 spring.cloud.gateway.routes[2].uri=${WORKOUT_SERVICE_URL}
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/*
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/workout/*
 ## Reporting Service Route
 spring.cloud.gateway.routes[3].id=reporting-service
 spring.cloud.gateway.routes[3].uri=${REPORTING_SERVICE_URL}
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/*
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/reporting/*
