working on gateway kubernetes

--- a/cad-UserService/src/main/resources/application.properties
+++ b/cad-UserService/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=cad
 spring.datasource.password=1234567890
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+billingmodel.free.max-user-count=${FREE_MAX_USER_COUNT}
+billingmodel.standard.max-user-count=${STANDARD_MAX_USER_COUNT}
