Working api gateway without swagger

--- a/cad-GatewayService/Dockerfile
+++ b/cad-GatewayService/Dockerfile
@@ -10,4 +10,5 @@ FROM openjdk:17-bullseye
 
 # Command to run on standalone container execution
 COPY --from=builder /app/target/*.jar GatewayService.jar
-ENTRYPOINT ["java", "-jar", "/GatewayService.jar", "--spring.config.name=prod"]
+ENTRYPOINT ["java", "-jar", "/GatewayService.jar"]
+# , "--spring.config.name=prod"]
