--- a/cad-GatewayService/src/main/resources/application-prod.properties
+++ b/cad-GatewayService/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
 spring.application.name=Gateway-Service
 server.port=8080
 server.forward-headers-strategy=framework
-logging.level.root=DEBUG
+logging.level.root=TRACE
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
-spring.cloud.gateway.default-filters=StripPrefix=2
+spring.cloud.gateway.default-filters=StripPrefix=1
 # Swagger Config
 springdoc.swagger-ui.path=/api/api-docs/swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url=true
