--- a/cad-GatewayService/src/main/resources/application.properties
+++ b/cad-GatewayService/src/main/resources/application.properties
@@ -3,24 +3,24 @@ server.port=8080
 server.forward-headers-strategy=framework
 logging.level.root=DEBUG
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
-logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.cloud.gateway=DEBUG
 spring.cloud.gateway.default-filters=StripPrefix=1
 # Swagger Config
 springdoc.swagger-ui.path=/api/api-docs/swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url=true
 ## Gym Service Route
 spring.cloud.gateway.routes[0].id=gym-service
-spring.cloud.gateway.routes[0].uri=http://localhost:7081/
+spring.cloud.gateway.routes[0].uri=${GYM_SERVICE_URL}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/gym/*
 ## User Service Route
 spring.cloud.gateway.routes[1].id=user-service
-spring.cloud.gateway.routes[1].uri=http://localhost:7082/
+spring.cloud.gateway.routes[1].uri=${USER_SERVICE_URL}
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/user/*
 ## Workout Service Route
 spring.cloud.gateway.routes[2].id=workout-service
-spring.cloud.gateway.routes[2].uri=http://localhost:7083/
+spring.cloud.gateway.routes[2].uri=${WORKOUT_SERVICE_URL}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/workout/*
 ## Reporting Service Route
 spring.cloud.gateway.routes[3].id=reporting-service
-spring.cloud.gateway.routes[3].uri=http://localhost:7084/
+spring.cloud.gateway.routes[3].uri=${REPORTING_SERVICE_URL}
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/reporting/*
