--- a/helm/cad-gymapp/templates/invoice-cronjob-configmap.yaml
+++ b/helm/cad-gymapp/templates/invoice-cronjob-configmap.yaml
@@ -5,3 +5,4 @@ metadata:
 data:
   gym_service_url: {{ .Values.gymServiceUrl }}
   user_service_url: {{ .Values.userServiceUrl }}
+  cost_per_user: {{ .Values.invoiceCronjob.costPerUser }}
