Use API Gateway

--- a/cad-GymService/src/main/resources/application.properties
+++ b/cad-GymService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=7081
+server.forward-headers-strategy=framework
 server.servlet.context-path=/gym
 spring.cloud.gcp.project-id=cad-gym-app
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
