--- a/cad-GatewayService/pom.xml
+++ b/cad-GatewayService/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
